--- a/src/app/shared/ui/sidebar/sidebar.component.html
+++ b/src/app/shared/ui/sidebar/sidebar.component.html
@@ -1,17 +1,10 @@
-<aside class="w-64 h-full bg-white border-r border-zinc-200 flex flex-col">
+<aside class="w-64 h-full bg-[#FAFAFA] border-r border-zinc-200 flex flex-col">
 
   <nav class="px-3 py-4 flex-1 overflow-auto space-y-1">
-    <a
-      *ngFor="let item of menu()"
-      [routerLink]="item.path"
-      routerLinkActive="active-link"
+    <a *ngFor="let item of menu()" [routerLink]="item.path" routerLinkActive="active-link"
       [routerLinkActiveOptions]="{ exact: true }"
-      class="menu-link group flex items-center gap-3 px-3 py-2 w-full rounded-lg transition-colors cursor-pointer"
-    >
-      <lucide-angular
-        [name]="item.icon"
-        class="icon w-5 h-5 text-zinc-600 transition-colors"
-      ></lucide-angular>
+      class="menu-link group flex items-center gap-3 px-3 py-2 w-full rounded-lg transition-colors cursor-pointer">
+      <lucide-angular [name]="item.icon" class="icon w-5 h-5 text-zinc-600 transition-colors"></lucide-angular>
 
       <span class="label text-sm transition-colors">{{ item.label }}</span>
     </a>
