--- a/src/app/features/cotizaciones/ui/wizard-stepper/wizard-stepper.component.html
+++ b/src/app/features/cotizaciones/ui/wizard-stepper/wizard-stepper.component.html
@@ -5,21 +5,14 @@
 
   <div class="flex justify-between w-full max-w-2xl">
 
-    <div
-      *ngFor="let step of steps; let i = index"
-      class="flex flex-col items-center flex-1 cursor-pointer select-none"
-      (click)="goTo(i)"
-    >
+    <div *ngFor="let step of steps; let i = index" class="flex flex-col items-center flex-1 select-none">
 
       <!-- Círculo -->
-      <div
-        class="circle"
-        [ngClass]="{
+      <div class="circle" [ngClass]="{
           'active': current === i,
           'completed': current > i,
           'pending': current < i
-        }"
-      >
+        }">
 
         <!-- Check -->
         <ng-container *ngIf="current > i; else showNumber">
@@ -34,13 +27,10 @@
       </div>
 
       <!-- Label -->
-      <div
-        class="step-label"
-        [ngClass]="{
+      <div class="step-label" [ngClass]="{
           'label-active': current === i,
           'label-default': current !== i
-        }"
-      >
+        }">
         {{ step.label }}
       </div>
 
