--- a/src/app/shared/ui/ui-select/ui-select.component.html
+++ b/src/app/shared/ui/ui-select/ui-select.component.html
@@ -1,19 +1,14 @@
-<div class="ui-select-wrapper relative">
+<div class="ui-select-wrapper relative" [class.is-open]="open()">
 
   <!-- Botón principal -->
-  <button type="button"
-          class="ui-select-btn"
-          [class.disabled]="disabled"
-          (click)="toggle()">
+  <button type="button" class="ui-select-btn" [class.disabled]="disabled" (click)="toggle()">
     <span>{{ selectedLabel }}</span>
     <lucide-icon name="chevron-down" class="chevron"></lucide-icon>
   </button>
 
   <!-- Panel dropdown -->
   <ul *ngIf="open()" class="ui-select-panel animate-dropdown">
-    <li *ngFor="let item of items"
-        (click)="select(item)"
-        class="ui-select-item">
+    <li *ngFor="let item of items" (click)="select(item)" class="ui-select-item">
       {{ item.label }}
     </li>
   </ul>
