--- a/src/app/features/admin/users/users.page.html
+++ b/src/app/features/admin/users/users.page.html
@@ -103,10 +103,15 @@
           </tr>
 
           <tr *ngIf="loading()">
-            <td class="p-12 text-center text-zinc-500" colspan="5">
-              <div class="flex items-center justify-center gap-3">
-                <div class="h-5 w-5 rounded-full border-2 border-zinc-300 border-t-[var(--brand)] animate-spin"></div>
-                <span>Cargando usuarios...</span>
+            <td colspan="5" class="p-0">
+              <div class="space-y-1 animate-pulse">
+                <div *ngFor="let i of [1,2,3,4,5,6]" class="flex items-center border-b border-zinc-50 p-4">
+                  <div class="h-4 w-1/4 bg-zinc-200 rounded mr-4"></div>
+                  <div class="h-4 w-1/4 bg-zinc-100 rounded mr-4"></div>
+                  <div class="h-4 w-1/3 bg-zinc-100 rounded mr-4"></div>
+                  <div class="h-6 w-20 bg-zinc-100 rounded-full"></div>
+                  <div class="ml-auto h-4 w-16 bg-zinc-100 rounded"></div>
+                </div>
               </div>
             </td>
           </tr>
